vlib/v/parser/tests/sql_no_db_expr_b.vv
fn x() {
	// SqlExpr
	x := sql_ :=
}
